cmake_minimum_required(VERSION 3.15)
project(tools)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_BUILD_TYPE Release)

option(COMPILE_LIBS OFF)
set(COMPILE_LIBS ON)
if (COMPILE_LIBS)
    add_subdirectory(libs)
endif ()
set(COMPILE_OPS ON)
if (COMPILE_OPS)
    add_subdirectory(ops)
endif ()

add_subdirectory(pybind11)
add_executable(tools main.cpp)
target_link_libraries(tools PRIVATE libs)
target_include_directories(tools PRIVATE /usr/local/Cellar/eigen/3.3.7/include/eigen3)
target_compile_options(tools PRIVATE -march=native)
add_library(example MODULE example.cpp)
target_link_libraries(example PRIVATE pybind11::module)
target_link_libraries(example PRIVATE libs)
target_include_directories(example PRIVATE /usr/local/Cellar/eigen/3.3.7/include/eigen3)
set_target_properties(example PROPERTIES PREFIX "${PYTHON_MODULE_PREFIX}"
        SUFFIX "${PYTHON_MODULE_EXTENSION}")
add_executable(test1 test1.cpp)
